--- a/www/css/enhanced.css
+++ b/www/css/enhanced.css
@@ -1,3 +1,38 @@
+#side {
+    position:absolute;
+    left:0; width:70px;
+    top:0;bottom:0;
+}
+
+#doc-title {
+    position:absolute;
+    left:70px; right:0;
+    top:0; height:30px;
+    
+}
+#doc-title input[type=search] {
+    width:80%;
+    font-size:16px;
+    padding:2px;
+    background-color:#aaa;
+}
+
+
+#doc-info {
+    position:absolute;
+    margin-left:60%;
+    left:70px; right:0;
+    top:30px; height:60px;
+    
+}
+
+#doc-text {
+    position:absolute;
+    margin-left:60%;
+    left:70px; right:0;
+    top:90px; bottom:0;
+}
+
 body > .content {
   -moz-transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
