--- a/www/css/enhanced.css
+++ b/www/css/enhanced.css
@@ -1,7 +1,17 @@
 #side {
     position:absolute;
-    left:0; width:70px;
+    left:-200px; width:370px;
     top:0;bottom:0;
+}
+
+#side .projects {
+    position:absolute;
+    right:70px;top:0;
+}
+#side .buttons {
+    position:absolute;
+    right:0; width:70px;
+    top:0; bottom:0;
 }
 
 #doc-title {
