--- a/www/css/tricks.css
+++ b/www/css/tricks.css
@@ -9,9 +9,9 @@ body {
     height: 100%;
     
     
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.55)), color-stop(40%,rgba(0,0,0,0)), color-stop(60%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.55))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0.55) 0%,rgba(0,0,0,0) 40%,rgba(0,0,0,0) 60%,rgba(0,0,0,0.55) 100%); /* Chrome10+,Safari5.1+ */
-    background: linear-gradient(left, rgba(0,0,0,0.55) 0%,rgba(0,0,0,0) 40%,rgba(0,0,0,0) 60%,rgba(0,0,0,0.55) 100%); /* W3C */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.85)), color-stop(40%,rgba(0,0,0,0.6)), color-stop(60%,rgba(0,0,0,0.6)), color-stop(100%,rgba(0,0,0,0.85))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0.85) 0%,rgba(0,0,0,0.6) 40%,rgba(0,0,0,0.6) 60%,rgba(0,0,0,0.85) 100%); /* Chrome10+,Safari5.1+ */
+    background: linear-gradient(left, rgba(0,0,0,0.85) 0%,rgba(0,0,0,0.6) 40%,rgba(0,0,0,0.6) 60%,rgba(0,0,0,0.85) 100%); /* W3C */
 }
 
 #logo {
@@ -26,8 +26,8 @@ body {
     
     background-image: url(../images/quill.png);
     background-repeat: no-repeat;
-    background-position-x: 40px;
-    background-position-y: -8px;
+    background-position-x: 42px;
+    background-position-y: -4px;
 }
 #logo h1 {
     font-family: Baskerville;
@@ -40,7 +40,8 @@ body {
     font-size: 18px;
     color: #aaa;
     text-shadow: 1px 1px white, -1px -1px #444;
-    padding-left: 43px;
+    padding-left: 95px;
+    margin-top: -2px;
 }
 
 #logo input[type=search] {
