--- a/www/css/enhanced.css
+++ b/www/css/enhanced.css
@@ -1,13 +1,24 @@
 #side {
     position:absolute;
-    left:-200px; width:370px;
+    left:-170px; width:210px;
     top:0;bottom:0;
     z-index: 10;
 }
 
 #side .projects {
     position:absolute;
-    right:70px;top:0;
+    right:40px;top:0;
+    padding:10px 5px;
+    font-size: .85em;
+}
+#side .projects input {
+  background-color:#777;
+  color:white;
+  border:1px solid #aaa;
+  border-radius: 11px;
+  font-size: 13px;
+  padding: 2px 4px;
+
 }
 #side .buttons {
     position:absolute;
@@ -21,7 +32,7 @@
 
 #doc-title {
     position:absolute;
-    left:170px; right:0;
+    left:140px; right:0;
     top:0; height:30px;
     
 }
@@ -36,7 +47,7 @@
 #doc-info {
     position:absolute;
     margin-left:60%;
-    left:70px; right:0;
+    left:40px; right:0;
     top:30px; height:60px;
     
 }
@@ -44,8 +55,15 @@
 #doc-text {
     position:absolute;
     margin-left:60%;
-    left:70px; right:0;
+    left:40px; right:0;
     top:90px; bottom:0;
+}
+
+body.initial .initially-hidden {
+  visibility:hidden;
+}
+body.initial #side {
+  left:0;
 }
 
 body > .content {
