--- a/www/css/tricks.css
+++ b/www/css/tricks.css
@@ -1,19 +1,27 @@
 html {
-    background-image: url(../images/metalTexture.gif);
+    background-image: url(../images/fabricTexture.jpg);
     height: 100%;
     overflow:hidden;
 }
 body {
     /*
-    background-image: url(../images/metalTexture.gif);
+    background-image: url(../images/fabricTexture.jpg);
     */
     height: 100%;
     overflow:hidden;
     
-    
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.85)), color-stop(40%,rgba(0,0,0,0.6)), color-stop(60%,rgba(0,0,0,0.6)), color-stop(100%,rgba(0,0,0,0.85))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0.85) 0%,rgba(0,0,0,0.6) 40%,rgba(0,0,0,0.6) 60%,rgba(0,0,0,0.85) 100%); /* Chrome10+,Safari5.1+ */
-    background: linear-gradient(left, rgba(0,0,0,0.85) 0%,rgba(0,0,0,0.6) 40%,rgba(0,0,0,0.6) 60%,rgba(0,0,0,0.85) 100%); /* W3C */
+    /* Chrome,Safari4+ */
+    /*
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.75)), color-stop(40%,rgba(0,0,0,0.5)), color-stop(60%,rgba(0,0,0,0.5)), color-stop(100%,rgba(0,0,0,0.75))); 
+    */
+    /* Chrome10+,Safari5.1+ */
+    /*
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0.75) 0%,rgba(0,0,0,0.5) 40%,rgba(0,0,0,0.5) 60%,rgba(0,0,0,0.75) 100%); 
+    */
+    /* W3C */
+    /*
+    background: linear-gradient(left, rgba(0,0,0,0.75) 0%,rgba(0,0,0,0.5) 40%,rgba(0,0,0,0.5) 60%,rgba(0,0,0,0.75) 100%); 
+    */
 }
 
 #logo {
