--- a/www/css/enhanced.css
+++ b/www/css/enhanced.css
@@ -7,37 +7,55 @@
 
 #side .projects {
     position:absolute;
-    right:40px;top:0;
-    padding:10px 5px;
+    left: 10px; right:10px; top:0;
+    padding:10px 0px;
     font-size: .85em;
 
     color: white;
 }
+
+#side .accounts {
+    position:absolute;
+    left:10px; right:10px; bottom:0;
+    font-size: .85em;
+
+    color: white;
+}
+
+#side .accounts > h1,
 #side .projects > h1 {
   padding-top: 20px;
   font-size: 1.2em;
   text-align: right;
   color: #AAA;
 }
+#side .accounts dl,
 #side .projects dl {
-    border: 1px solid #999;
+    border: 1px solid rgba(255,255,255,0.2);
     border-radius: 10px;
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(255,255,255,0.05);
     text-align: right;
     padding: 5px;
     margin-top: 10px;
 
 }
+#side .accounts ul,
 #side .projects ul {
   padding-bottom: 5px;
 }
+#side .accounts li,
 #side .projects li {
-  padding: 2px 0;
+  padding: 2px 8px;
   text-align: right;
+  border: 1px solid rgba(255,255,255,0.2);
+  border-radius: 10px;
+	margin: 5px 0;
 }
+#side .accounts ul a,
 #side .projects ul a {
     color: #AAA;
 }
+#side .accounts input,
 #side .projects input {
   background-color:#777;
   color:white;
