--- a/_scss/basic.scss
+++ b/_scss/basic.scss
@@ -14,60 +14,60 @@ Basic CSS
 
 @font-face {
   font-family: 'MuseoSans500';
-  src: url("/fonts/museosans_500_macroman/MuseoSans_500-webfont.eot");
-  src: url("/fonts/museosans_500_macroman/MuseoSans_500-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/museosans_500_macroman/MuseoSans_500-webfont.woff") format("woff"), url("/fonts/museosans_500_macroman/MuseoSans_500-webfont.ttf") format("truetype"), url("/fonts/museosans_500_macroman/MuseoSans_500-webfont.svg#MuseoSans500") format("svg");
+  src: url("../fonts/museosans_500_macroman/MuseoSans_500-webfont.eot");
+  src: url("../fonts/museosans_500_macroman/MuseoSans_500-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/museosans_500_macroman/MuseoSans_500-webfont.woff") format("woff"), url("/fonts/museosans_500_macroman/MuseoSans_500-webfont.ttf") format("truetype"), url("/fonts/museosans_500_macroman/MuseoSans_500-webfont.svg#MuseoSans500") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'NewCicleFina';
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.eot");
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.svg#NewCicleFina") format("svg");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.eot");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina-webfont.svg#NewCicleFina") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'NewCicleFinaItalic';
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.eot");
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.svg#NewCicleFinaItalic") format("svg");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.eot");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Fina_Italic-webfont.svg#NewCicleFinaItalic") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'NewCicleSemi';
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.eot");
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.svg#NewCicleSemi") format("svg");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.eot");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi-webfont.svg#NewCicleSemi") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'NewCicleSemiItalic';
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.eot");
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.svg#NewCicleSemiItalic") format("svg");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.eot");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Semi_Italic-webfont.svg#NewCicleSemiItalic") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'NewCicleGordita';
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.eot");
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.svg#NewCicleGordita") format("svg");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.eot");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita-webfont.svg#NewCicleGordita") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'NewCicleGorditaItalic';
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.eot");
-  src: url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.svg#NewCicleGorditaItalic") format("svg");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.eot");
+  src: url("../fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.woff") format("woff"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.ttf") format("truetype"), url("/fonts/New-Cicle-fontfacekit/New_Cicle_Gordita_Italic-webfont.svg#NewCicleGorditaItalic") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
     font-family: 'InconsolataMedium';
-    src: url('/fonts/Inconsolata-fontfacekit/Inconsolata-webfont.eot');
-    src: url('/fonts/Inconsolata-fontfacekit/Inconsolata-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/Inconsolata-fontfacekit/Inconsolata-webfont.woff') format('woff'),
-         url('/fonts/Inconsolata-fontfacekit/Inconsolata-webfont.ttf') format('truetype'),
-         url('/fonts/Inconsolata-fontfacekit/Inconsolata-webfont.svg#InconsolataMedium') format('svg');
+    src: url('../fonts/Inconsolata-fontfacekit/Inconsolata-webfont.eot');
+    src: url('../fonts/Inconsolata-fontfacekit/Inconsolata-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Inconsolata-fontfacekit/Inconsolata-webfont.woff') format('woff'),
+         url('../fonts/Inconsolata-fontfacekit/Inconsolata-webfont.ttf') format('truetype'),
+         url('../fonts/Inconsolata-fontfacekit/Inconsolata-webfont.svg#InconsolataMedium') format('svg');
     font-weight: normal;
     font-style: normal;
 
