--- a/_scss/basic.scss
+++ b/_scss/basic.scss
@@ -188,36 +188,6 @@ textarea.contenteditable {
   position: absolute;
   left: -100%; }
 
-/* `Clear Floated Elements
-----------------------------------------------------------------------------------------------------*/
-/* http://sonspring.com/journal/clearing-floats */
-.clear {
-  clear: both;
-  display: block;
-  overflow: hidden;
-  visibility: hidden;
-  width: 0;
-  height: 0; }
-
-/* http://perishablepress.com/press/2009/12/06/new-clearfix-hack */
-.clearfix:after {
-  clear: both;
-  content: ' ';
-  display: block;
-  font-size: 0;
-  line-height: 0;
-  visibility: hidden;
-  width: 0;
-  height: 0; }
-
-/*
-	The following zoom:1 rule is specifically for IE6 + IE7.
-	Move to separate stylesheet if invalid CSS is a problem.
-*/
-* html .clearfix,
-*:first-child + html .clearfix {
-  zoom: 1; }
-
 .content {
   position: absolute;
   left: 0;
@@ -379,22 +349,49 @@ div#logo {
     background-color: rgba(200,200,200,0.2);
     font-size: 0.7em;
     text-align: center;
-    padding-top: 4px;
+    padding-top: 15px;
+    padding-left: 35px;
     color: #ddd;
+
+    img[name=account-illu] {
+      display: block;
+      position: absolute;
+      left: 10px;
+      top: 10px;
+    }
+
+  input {
+      display:block;
+      width: 150px;
+      margin-left: 10px;
+      margin-top: 10px;
+      border-radius: 3px;
+      font-size: 1.2em;
+
+      background: transparent;
+      color: black;
+      border-width: 0 0 2px 0;
+      border-color: #ddd;
+  }
+  button {
+      display:block;
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+  }
 }
 
-#signin input {
-    display:block;
-    width: 150px;
-    margin-left: 10px;
-    margin-top: 10px;
-    border-radius: 3px;
-    font-size: 1.2em;
+#account-head {
+      display: block;
+      position: absolute;
+      top:0; right:0;
+
+    img[name=account-illu] {
+      display: block;
+      position: absolute;
+      right: 3px;
+      top: 3px;
+    }
 }
-#signin button {
-    display:block;
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-}
+
 
